--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: wheat;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +35,124 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.white-text {
+  color: white;
+  z-index: 1051;
+}
+
+.backg-color {
+  background-color: #848b92; /* Set the background color to grey */
+  border: none;
+  box-shadow: none;
+}
+
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.5); /* Set the backdrop color to semi-transparent grey */
+}
+
+/* App.css */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2; /* Set a light background color for the entire page */
+}
+
+/* Global styles */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* Header styles */
+.header {
+  background-color: #343a40;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+/* Books Component Styles */
+.books-container {
+  margin-top: 20px;
+  background-color: #fff; /* Set a white background color for the Books component */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a box shadow for a card-like appearance */
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+  outline: none;
+}
+
+.books-table {
+  margin-top: 20px;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.books-table th,
+.books-table td {
+  padding: 10px;
+  border: 1px solid #ddd;
+  text-align: left;
+}
+
+.books-table th {
+  background-color: #343a40;
+  color: #fff;
+}
+
+.books-table tbody tr:hover {
+  background-color: #f8f9fa;
+  cursor: pointer;
+}
+
+.delete-button,
+.edit-button {
+  font-size: 18px;
+  color: #dc3545;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.edit-button {
+  color: #ffc107;
+}
+
+.add-button {
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.add-button:hover {
+  background-color: #218838;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+/* Footer styles */
+.footer {
+  background-color: #343a40;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
 }
